--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -84,3 +84,12 @@
   background-color: #ffce45;
 }
 /*  all page titles end */
+
+
+
+.bg__for__header{
+  background-image: url("../images/frmaes.svg");
+  height: 700px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
