--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -6,7 +6,7 @@
 @tailwind components;
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 * {
   margin: 0;
@@ -87,7 +87,7 @@
 /*  all page titles end */
 
 .bg__for__header {
-  background-image: url("../images/frmaes.svg");
+  background-image: url("../images/bg.png");
   height: 700px;
   background-repeat: no-repeat;
   background-size: cover;
