--- a/src/components/service/Service.css
+++ b/src/components/service/Service.css
@@ -6,3 +6,88 @@
 .row{
     color: #28438E;
 }
+
+.cardSlider {
+    width: 439px;
+    height: 300px;
+    left: 472px;
+    top: 2461.88px;
+    background: #FFFFFF;
+    box-shadow: 0px 8px 20px 9px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    padding: 2vw 3vw;
+}
+
+.moveSlider .slick-slide>div {
+    margin: 4vw 2vw;
+}
+
+.moveSlider .wrapper_title {
+    padding-left: 6vw;
+}
+
+.moveSlider .title_pages::after {
+    left: 6vw;
+}
+
+.cardItem {
+    padding: 0 4vw;
+}
+
+.moveSlider .slick-dots {
+    display: none !important;
+}
+
+.cardSlider__titte .cardSlider__img {
+    width: 6vw;
+    height: 6vw;
+    border-radius: 50%;
+    margin-right: 2vw;
+    overflow: hidden;
+}
+
+.cardSlider__img img {
+    border-radius: 50%;
+}
+
+.cardSlider__deck {
+    margin-top: 1vw;
+}
+
+.cardSlider__text .stars img {
+    margin-right: .20vw !important;
+}
+
+.moveSlider .slick-arrow {
+    width: 60px;
+    height: 60px;
+    background: #fff;
+    box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3);
+    border-radius: 100px;
+    z-index: 6;
+    padding: 1vw;
+}
+
+.slick-next:before {
+    content: "←";
+    display: none;
+}
+
+.slick-prev:before {
+    content: "←";
+    display: none;
+}
+
+.moveSlider .slick-next {
+    background-image: url("../../assets/images/arrow.png");
+    background-repeat: no-repeat;
+    background-size: 40% auto;
+    background-position: center;
+}
+
+.moveSlider .slick-prev {
+    background-image: url("../../assets/images/Arrow\ \(1\).png");
+    background-repeat: no-repeat;
+    background-size: 40% auto;
+    background-position: center;
+}
