--- a/src/components/service/Service.css
+++ b/src/components/service/Service.css
@@ -1,93 +1,72 @@
 .striped .row:nth-child(even) {
-    background: rgba(0, 97, 204, 0.1);
-    color: #28438E;
+  background: rgba(0, 97, 204, 0.1);
+  color: #28438e;
 }
 
-.row{
-    color: #28438E;
+.row {
+  color: #28438e;
 }
 
 .cardSlider {
-    width: 439px;
-    height: 300px;
-    left: 472px;
-    top: 2461.88px;
-    background: #FFFFFF;
-    box-shadow: 0px 8px 20px 9px rgba(0, 0, 0, 0.1);
-    border-radius: 20px;
-    padding: 2vw 3vw;
+  width: 439px;
+  /* height: 300px; */
+  left: 472px;
+  top: 2461.88px;
+  background: #ffffff;
+  box-shadow: 0px 8px 20px 9px rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+  padding: 2vw 3vw;
 }
 
-.moveSlider .slick-slide>div {
-    margin: 4vw 2vw;
+.moveSlider .slick-slide > div {
+  margin: 4vw 2vw;
 }
-
-.moveSlider .wrapper_title {
-    padding-left: 6vw;
-}
-
-.moveSlider .title_pages::after {
-    left: 6vw;
-}
-
 .cardItem {
-    padding: 0 4vw;
+  padding: 0 4vw;
 }
 
 .moveSlider .slick-dots {
-    display: none !important;
-}
-
-.cardSlider__titte .cardSlider__img {
-    width: 6vw;
-    height: 6vw;
-    border-radius: 50%;
-    margin-right: 2vw;
-    overflow: hidden;
-}
-
-.cardSlider__img img {
-    border-radius: 50%;
+  display: none !important;
 }
 
 .cardSlider__deck {
-    margin-top: 1vw;
+  margin-top: 1vw;
 }
 
 .cardSlider__text .stars img {
-    margin-right: .20vw !important;
+  margin-right: 0.2vw !important;
 }
 
 .moveSlider .slick-arrow {
-    width: 60px;
-    height: 60px;
-    background: #fff;
-    box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3);
-    border-radius: 100px;
-    z-index: 6;
-    padding: 1vw;
+  width: 60px;
+  height: 60px;
+  background: #fff;
+  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3);
+  border-radius: 100px;
+  z-index: 6;
+  padding: 1vw;
 }
 
 .slick-next:before {
-    content: "←";
-    display: none;
+  content: "←";
+  display: none;
 }
 
 .slick-prev:before {
-    content: "←";
-    display: none;
+  content: "←";
+  display: none;
 }
 
 .moveSlider .slick-next {
-    background-image: url("../../assets/images/arrow.png");
-    background-repeat: no-repeat;
-    background-size: 40% auto;
-    background-position: center;
+  background-image: url("../../assets/images/arrow.png");
+  background-repeat: no-repeat;
+  background-size: 40% auto;
+  background-position: center;
 }
 
 .moveSlider .slick-prev {
-    background-image: url("../../assets/images/Arrow\ \(1\).png");
-    background-repeat: no-repeat;
-    background-size: 40% auto;
-    background-position: center;
+  background-image: url("../../assets/images/Arrow\ \(1\).png");
+  background-repeat: no-repeat;
+  background-size: 40% auto;
+  background-position: center;
 }
